[package]
name = "client"
version = "0.1.0"
authors = ["Andy Bell <andy.bell@displaynote.com>"]
edition = "2018"
description = "Echo server"
licence = "MIT/Apache-2.0"
repository = "https://github.com/andyjsbell/rust-tcp-echo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

